# solvespace_python

./: .gitignore  README.md  build_windows.bat
exposed/: CMakeLists.txt  demo.py
include/: slvs.h
src/: CMakeLists.txt
src/swig/: CMakeLists.txt  slvs.i  slvs_swig.hpp
src/swig/python/: CMakeLists.txt  setup.py.in
